ESQL: keep partition-name order deterministic
Drop the redundant isEmpty() test per review, but keep the LinkedHashSet
rather than Set.copyOf. No consumer iterates this set today (all use
contains/isEmpty), but Set.copyOf randomizes iteration order per JVM, so
a coordinator and a data node would order it differently. If these names
ever surface user-visibly -- an error message, a plan string -- that would
be nondeterministic and divergent across nodes. Ordering a handful of
strings once per plan costs nothing and removes the failure mode.
Rationale recorded in the javadoc.